cmake_minimum_required(VERSION 3.21)
project(MidtermReview)

set(CMAKE_CXX_STANDARD 14)

add_executable(MidtermReview Week1[FileReadingWriting].cpp Week2.cpp cmake-build-debug/Vehicle.cpp cmake-build-debug/Vehicle.hpp cmake-build-debug/Week3.cpp cmake-build-debug/Boat.cpp cmake-build-debug/Boat.hpp)
